Make UI Better & Surah Name Feature Added

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <header>
-        <h1>Welcome To Ali's Quran Site</h1>
-    <div class="search">
-        <input type="text" id="search" placeholder="Surah No:Verse No">
-        <button>Search</button>
-    </div>
-    <div>
-        <audio controls>
-            <source type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
-    </div>
+        <div class="pic">
+            <h1>Welcome To Ali's Quran Site</h1>
+            <div class="search">
+                <input type="text" id="search" placeholder="Surah No:Verse No">
+                <button>Search</button>
+            </div>
+        </div>
 
     <div class="Arabic Ar"><h3></h3><p></p></div>
+    <audio controls>
+        <source type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 
     <div>
         <label for="trans">Select Translation:</label>
