Some Responsivness is Added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="pic">
             <h1>Welcome To Ali's Quran Site</h1>
             <div class="search">
-                <input type="text" id="search" placeholder="Surah No:Verse No">
-                <button>Search</button>
+                <input type="text" id="search" placeholder="Surah No:Verse No" required>
+                <button type="submit">Search</button>
             </div>
         </div>
 
